Added button to index.html that plays a round of tic tac toe.

--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,10 @@
     display: grid;
     grid-template-columns: 50px 50px 50px;
     grid-template-rows: 50px 50px 50px;
+    colum-gap: 10px;
+    row-gap: 10px;
+}
+
+.grid-container > div {
+    border: 1px solid blue;
 }
